Bug 437062 - Glitch on hover over context menu of a window decoration on Wayland when using non-opaque menu with blur effect
Summary: Glitch on hover over context menu of a window decoration on Wayland when usin...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.27.4
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
: 449382 451619 452563 454251 456324 464632 470168 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-13 23:05 UTC by Patrick Silva
Modified: 2023-05-25 21:50 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.6
Sentry Crash Report:


Attachments
screenshot (125.19 KB, image/png)
2021-05-13 23:05 UTC, Patrick Silva
Details
new screenshot of neon unstable (139.66 KB, image/png)
2021-06-27 19:34 UTC, Patrick Silva
Details
glitch with the submenu of the context menu of the task manager (186.75 KB, image/png)
2022-05-22 13:45 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-05-13 23:05:37 UTC
Created attachment 138397 [details]
screenshot

SUMMARY
Similar to bug 399680, reproducible on both Arch Linux (Plasma 5.22 beta) and neon unstable.
Please see the attached screenshot.

STEPS TO REPRODUCE
1. on Wayland, right-click on a window decoration
2. hover over context menu
3. 

EXPECTED RESULT
no glitch when we hover over context menu of a window decoration on Wayland

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.21.90
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Lucia Mrenica 2021-05-14 11:42:47 UTC
Same problem here.
Comment 2 Nate Graham 2021-05-20 18:36:24 UTC
Cannot reproduce with current git master. Any chance you could check there?
Comment 3 Patrick Silva 2021-05-20 18:50:40 UTC
Fixed on neon unstable yesterday. :)
Comment 4 Patrick Silva 2021-05-21 11:49:30 UTC
For some reason  blur effect was disabled on my system after some updates.
I have enabled blur again and this bug persists.
Comment 5 Patrick Silva 2021-06-15 01:27:30 UTC
cannot reproduce on neon unstable. Probably fixed by breeze evolution.
Comment 6 Patrick Silva 2021-06-27 19:34:27 UTC
Created attachment 139695 [details]
new screenshot of neon unstable

Nevermind. It's still happening, more noticeable if I set
high level of transparency for menus in Breeze style settings.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 7 Nate Graham 2021-07-22 18:24:51 UTC
Does this only happen for window decoration context menus, or for all context menus?
Comment 8 Patrick Silva 2021-07-23 13:31:30 UTC
(In reply to Nate Graham from comment #7)
> Does this only happen for window decoration context menus, or for all
> context menus?

it only happens for window decoration context menus.
Comment 9 Nate Graham 2021-08-03 21:21:53 UTC
Confirmed. Just window decoration menus on Wayland.
Comment 10 Patrick Silva 2022-01-30 22:57:44 UTC
*** Bug 449382 has been marked as a duplicate of this bug. ***
Comment 11 Patrick Silva 2022-03-17 13:31:13 UTC
*** Bug 451619 has been marked as a duplicate of this bug. ***
Comment 12 Patrick Silva 2022-04-13 14:57:37 UTC
*** Bug 452563 has been marked as a duplicate of this bug. ***
Comment 13 Patrick Silva 2022-05-22 13:45:53 UTC
Created attachment 149108 [details]
glitch with the submenu of the context menu of the task manager

Possibly the glitch with the submenu of the context menu of the task manager seen in the screenshot attached to this comment is related.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4
Graphics Platform: Wayland
Comment 14 Patrick Silva 2022-05-23 23:57:33 UTC
*** Bug 454251 has been marked as a duplicate of this bug. ***
Comment 15 Patrick Silva 2022-07-05 15:56:30 UTC
*** Bug 456324 has been marked as a duplicate of this bug. ***
Comment 16 postix 2022-07-05 16:06:33 UTC
Like mentioned in the duplicate report: This bug seems to happen also for opaque menus:
The highlighting just becomes less visible or more faint, the more opaque the menu becomes til practically it disappears at full opacity.
Comment 17 Patrick Silva 2023-01-22 20:07:28 UTC
*** Bug 464632 has been marked as a duplicate of this bug. ***
Comment 18 postix 2023-04-07 19:17:36 UTC
Is this bug by any chance also fixed with https://bugreports.qt.io/browse/QTBUG-93380 ?
Comment 19 Puspam Adak 2023-04-21 14:48:20 UTC
Confirmed this on Plasma 5.27.4
Comment 20 Vlad Zahorodnii 2023-05-23 06:53:30 UTC
Git commit f3e4495e4471204768eaf98d5128e92869e3b435 by Vlad Zahorodnii, on behalf of Mouse Zhang.
Committed on 23/05/2023 at 06:23.
Pushed by vladz into branch 'master'.

plugins/qpa: initialize buffer in backingstore

M  +13   -0    src/plugins/qpa/backingstore.cpp
M  +1    -0    src/plugins/qpa/backingstore.h

https://invent.kde.org/plasma/kwin/commit/f3e4495e4471204768eaf98d5128e92869e3b435
Comment 21 Vlad Zahorodnii 2023-05-23 07:21:10 UTC
Git commit ba5230659bf61a4e927d67901cb51291e646c018 by Vlad Zahorodnii, on behalf of Mouse Zhang.
Committed on 23/05/2023 at 07:03.
Pushed by vladz into branch 'Plasma/5.27'.

plugins/qpa: initialize buffer in backingstore


(cherry picked from commit f3e4495e4471204768eaf98d5128e92869e3b435)

M  +13   -0    src/plugins/qpa/backingstore.cpp
M  +1    -0    src/plugins/qpa/backingstore.h

https://invent.kde.org/plasma/kwin/commit/ba5230659bf61a4e927d67901cb51291e646c018
Comment 22 Patrick Silva 2023-05-23 16:30:12 UTC
*** Bug 470168 has been marked as a duplicate of this bug. ***