plugins/qpa: initialize buffer in backingstore

BUG: 437062


(cherry picked from commit f3e4495e4471204768eaf98d5128e92869e3b435)