src/plugins/qpa/backingstore.h
@@ -27,6 +27,7 @@ public:
     QPaintDevice *paintDevice() override;
     void flush(QWindow *window, const QRegion &region, const QPoint &offset) override;
     void resize(const QSize &size, const QRegion &staticContents) override;
+    void beginPaint(const QRegion &region) override;
 
 private:
     QImage m_backBuffer;
